--- a/src/main/resources/templates/auth/registrar.html
+++ b/src/main/resources/templates/auth/registrar.html
@@ -5,22 +5,50 @@
 </head>
 <body>
 <h1>Register:</h1>
-<form action="/registrar" th:object="${formCliente}" method="POST" enctype="utf8">
+<form action="/registrar" th:object="${formRegistro}" method="POST" enctype="utf8">
     <div>
         <label>Email</label>
-        <input th:field="*{email}"/>
+        <input type="email" th:field="*{email}" required>
     </div>
     <div>
         <label>Password</label>
-        <input type="password" th:field="*{contrasenia}"/>
+        <input id="password" required th:field="*{contrasenia}" type="password">
     </div>
     <div>
         <label>Confirm password</label>
-        <input type="password" th:field="*{confContrasenia}"/>
+        <input id="passwordConf" onkeyup="checkMatchPassword()" required th:field="*{confContrasenia}" type="password">
+    </div>
+    <div>
+        <label>Nombre</label>
+        <input type="text" th:field="*{nombre}" required>
+    </div>
+    <div>
+        <label>Apellido Paterno</label>
+        <input type="text" th:field="*{apellidoPaterno}" required>
+    </div>
+    <div>
+        <label>Apellido Materno</label>
+        <input type="text" th:field="*{apellidoMaterno}" required>
+    </div>
+    <div>
+        <label>Dirección</label>
+        <input type="text" th:field="*{direccion}" required>
     </div>
     <button type="submit">Register</button>
 </form>
 
 <a th:href="@{/login}">Login</a>
+
+<script type='text/javascript'>
+    function checkMatchPassword() {
+        const passwordConf = document.getElementById('passwordConf');
+        const password = document.getElementById('password');
+        if (password.value !== passwordConf.value) {
+            passwordConf.setCustomValidity('Las contraseñas no coinciden.');
+        } else {
+            passwordConf.setCustomValidity('');
+        }
+    }
+</script>
 </body>
 </html>
