--- a/src/main/resources/templates/auth/registrar.html
+++ b/src/main/resources/templates/auth/registrar.html
@@ -1,43 +1,101 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <title>Spring Security Example </title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
-<h1>Register:</h1>
-<form action="/registrar" th:object="${formRegistro}" method="POST" enctype="utf8">
-    <div>
-        <label>Email</label>
-        <input type="email" th:field="*{email}" required>
-    </div>
-    <div>
-        <label>Password</label>
-        <input id="password" required th:field="*{contrasenia}" type="password">
-    </div>
-    <div>
-        <label>Confirm password</label>
-        <input id="passwordConf" onkeyup="checkMatchPassword()" required th:field="*{confContrasenia}" type="password">
-    </div>
-    <div>
-        <label>Nombre</label>
-        <input type="text" th:field="*{nombre}" required>
-    </div>
-    <div>
-        <label>Apellido Paterno</label>
-        <input type="text" th:field="*{apellidoPaterno}" required>
-    </div>
-    <div>
-        <label>Apellido Materno</label>
-        <input type="text" th:field="*{apellidoMaterno}" required>
-    </div>
-    <div>
-        <label>Dirección</label>
-        <input type="text" th:field="*{direccion}" required>
-    </div>
-    <button type="submit">Register</button>
-</form>
+<nav th:replace="fragments :: navbar"></nav>
 
-<a th:href="@{/login}">Login</a>
+<div class="container">
+    <div class="row py-5">
+        <div class="mx-auto col-md-10">
+            <div class="card">
+                <h1 class="card-header">Registrar:</h1>
+                <form class="card-body" action="/registrar" th:object="${formRegistro}" method="POST" enctype="utf8">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="material-icons">alternate_email</i>
+                                        </div>
+                                    </div>
+                                    <input id="email" class="form-control" type="email" th:field="*{email}" required
+                                           placeholder="ejemplo@mail.com">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Contraseña</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">vpn_key</i></div>
+                                    </div>
+                                    <input class="form-control" id="password" required th:field="*{contrasenia}"
+                                           type="password" placeholder="contraseña">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordConf">Confirmación contraseña</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">vpn_key</i></div>
+                                    </div>
+                                    <input class="form-control" id="passwordConf" onkeyup="checkMatchPassword()"
+                                           placeholder="contraseña" required th:field="*{confContrasenia}"
+                                           type="password">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="nombre">Nombre</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">person</i></div>
+                                    </div>
+                                    <input class="form-control" id="nombre" placeholder="Luis" required
+                                           th:field="*{nombre}" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="apellido-paterno">Apellido Paterno</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">people</i></div>
+                                    </div>
+                                    <input class="form-control" id="apellido-paterno" placeholder="Lopez" required
+                                           th:field="*{apellidoPaterno}" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="apellido-materno">Apellido Materno</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">people</i></div>
+                                    </div>
+                                    <input class="form-control" id="apellido-materno" placeholder="Pérez" required
+                                           th:field="*{apellidoMaterno}" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="direccion">Dirección</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text"><i class="material-icons">home</i></div>
+                                    </div>
+                                    <input class="form-control" id="direccion" placeholder="Calle #19 Colonia" required
+                                           th:field="*{direccion}" type="text">
+                                </div>
+                            </div>
+                            <button class="btn btn-success" type="submit">Registrar</button>
+                            <span class="ml-2">Ya tienes cuenta? <a th:href="@{/login}">Inicia sesión</a>.</span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type='text/javascript'>
     function checkMatchPassword() {
@@ -50,5 +108,7 @@
         }
     }
 </script>
+
+<div th:replace="fragments :: bootstrap-js"></div>
 </body>
 </html>
