--- a/src/main/resources/templates/auth/registrar.html
+++ b/src/main/resources/templates/auth/registrar.html
@@ -8,7 +8,7 @@
     <div class="row py-5">
         <div class="mx-auto col-md-10">
             <div class="card">
-                <h1 class="card-header">Registrar:</h1>
+                <h4 class="card-header">Registrar</h4>
                 <form class="card-body" action="/registrar" th:object="${formRegistro}" method="POST" enctype="utf8">
                     <div class="row">
                         <div class="col-md-6">
