--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,14 +16,24 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
-
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/home}">Home</a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="nav">
+    <a class="navbar-brand" th:href="@{/home}"> iEatIt </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/categorias/listar"> Categorias </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/alimentos/listar"> Alimentos </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> Iniciar sesión </a>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <div th:fragment="bootstrap-js">
