--- a/src/main/resources/templates/auth/registrar.html
+++ b/src/main/resources/templates/auth/registrar.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body>
-<nav th:replace="fragments :: navbar"></nav>
+<nav th:replace="fragments :: nav"></nav>
 
 <div class="container">
     <div class="row py-5">
