--- a/src/main/resources/templates/categorias/listar.html
+++ b/src/main/resources/templates/categorias/listar.html
@@ -1,44 +1,22 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title> Categorías </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <script src="https://unpkg.com/feather-icons"></script>
-    </head>
+    <div th:replace="fragments :: head"></div>
+    <div th:replace="fragments :: nav"></div>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"> iEatIt </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link">
-                            Categorias
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/alimentos/listar"> Alimentos </a>
-                    </li>
-                    <li class="nav-item my-2 my-lg-0">
-                        <a class="nav-link" href="#"> Iniciar sesión </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
         <div class="container">
-            <a href="/categorias/crear" class="text-white btn btn-success">
-                    <i data-feather="plus"></i>
-            </a>
+            <div th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
+                <a href="/categorias/crear" class="text-white btn btn-success">
+                        <i data-feather="plus"></i>
+                </a>
+            </div>
             <table class="table table-bordered table-hover">
                 <thead>
                     <tr>
                         <th class="text-center" scope="col"> # </th>
                         <th class="text-center" scope="col"> Nombre </th>
                         <th class="text-center" scope="col"> Descripción </th>
-                        <th class="text-center" scope="col" colspan="2"> Opciones </th>
+                        <th th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}"
+                            class="text-center" scope="col" colspan="2"> Opciones </th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
@@ -46,13 +24,13 @@
                         <th scope="row" th:text="${categoria.id}" />
                         <td th:text="${categoria.nombre}" />
                         <td th:text="${categoria.descripcion}" />
-                        <td>
+                        <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
                             <a type="button" class="btn btn-outline-info"
                                     th:href="@{/categorias/actualizar/{id}(id=${categoria.id})}">
                                 Actualizar
                             </a>
                         </td>
-                        <td>
+                        <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
                             <form th:action="@{/categorias/eliminar(id=${categoria.getId()})}" method="post">
                                 <button type="submit" class="btn btn-outline-danger">
                                     Eliminar
@@ -63,12 +41,6 @@
                 </tbody>
             </table>
         </div>
-        <script>
-            feather.replace()
-        </script>
     </body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <div th:replace="fragments :: bootstrap-js"></div>
 </html>
