--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -4,19 +4,48 @@
 <body>
 <nav th:replace="fragments :: nav"></nav>
 
-<body>
-<div th:if="${param.error}">
-    Invalid username and password.
+<div class="container">
+    <div class="row py-5">
+        <div class="mx-auto col-md-6">
+            <div class="card">
+                <h4 class="card-header">Iniciar Sesión</h4>
+                <div th:if="${param.error}">
+                    Error al iniciar sesión.
+                </div>
+                <form class="card-body" th:action="@{/login}" method="post">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">
+                                    <i class="material-icons">alternate_email</i>
+                                </div>
+                            </div>
+                            <input id="email" type="text" name="username" class="form-control"
+                                   placeholder="ejemplo@mail.com"/>
+                        </div>
+                    </div>
+                    <div>
+                        <label for="password">Contraseña</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">
+                                    <i class="material-icons">vpn_key</i>
+                                </div>
+                            </div>
+                            <input id="password" class=form-control type="password" name="password"
+                                   placeholder="contraseña"/>
+                        </div>
+                    </div>
+                    <div class="form-group pt-3">
+                        <button class="btn btn-success" type="submit">Iniciar sesión</button>
+                        <span class="ml-2">No tienes cuenta? <a th:href="@{/registrar}">Registrarse</a></span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name: <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-    <p>Click <a th:href="@{/registrar}">here</a> to register.</p>
-</form>
 </body>
 
 <div th:replace="fragments :: bootstrap-js"></div>
