--- a/src/main/resources/templates/orden/crear.html
+++ b/src/main/resources/templates/orden/crear.html
@@ -3,15 +3,15 @@
 <head th:replace="fragments :: head"></head>
 <body>
 
-<nav th:replace="fragments :: navbar"></nav>
+<nav th:replace="fragments :: nav"></nav>
 
 <div class="container">
     <div class="row">
         <form method="post" th:action="@{/orden/crear}">
             <div class="custom-control custom-checkbox" th:each="alimento : ${alimentos}">
                 <input class="custom-control-input" type="checkbox" name="idAlimentos"
-                       th:value="${alimento.getIdAlimento()}" th:id="${alimento.getIdAlimento()}">
-                <label class="custom-control-label" th:for="${alimento.getIdAlimento()}"
+                       th:value="${alimento.getId()}" th:id="${alimento.getId()}">
+                <label class="custom-control-label" th:for="${alimento.getId()}"
                        th:text="${alimento.getNombre()}"></label>
             </div>
             <button class="btn btn-success" type="submit">CREAR</button>
