--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,7 +31,13 @@
                     <a class="nav-link" href="/alimentos/listar"> Alimentos </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/orden/mostrar?estado=PENDIENTE"> Ordenes </a>
+                </li>
+                <li class="nav-item float-right">
                     <a class="nav-link" href="/login"> Iniciar sesión </a>
+                </li>
+                <li class="nav-item float-right">
+                    <a class="nav-link" href="/logout"> Cerrar sesión </a>
                 </li>
             </ul>
         </div>
