--- a/src/main/resources/templates/orden/detalles.html
+++ b/src/main/resources/templates/orden/detalles.html
@@ -6,46 +6,48 @@
 <nav th:replace="fragments :: nav"></nav>
 
 <div class="container">
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title"></h3>
-                <div class="card-text">
-                    <p>
-                        <span th:text="${'Orden: ' + orden.getIdOrden() + ' (' + orden.getEstado() + ')'}"></span><br>
-                        <span th:text="${'Nombre: ' + orden.getUsuario().getNombre()}"></span><br>
-                        <span th:text="${'Dirección de entrega: ' + orden.getDireccionDeEntrega().getDireccion()}"></span><br>
-                        <span th:text="${'Fecha de creación: ' + orden.getHoraCreacion()}"></span><br>
-                        <span th:text="${'Hora de entrega estimada: ' + orden.getHoraDeEntregaAproximada()}"></span><br>
-                        <span th:text="${'Hora de entrega estimada: ' + orden.getHoraDeEntregaAproximada()}"></span><br>
-                    </p>
-                    <table class="table table-bordered table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Precio</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="alimento : ${orden.getAlimentos()}">
-                            <td th:text="${alimento.getNombre()}"></td>
-                            <td th:text="${alimento.getPrecio()}"></td>
-                        </tr>
-                        <tr>
-                            <td colspan="2"></td>
-                        </tr>
-                        <tr>
-                            <td><b>Total:</b></td>
-                            <td th:text="${orden.getCostoTotal()}"></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <form th:action="@{/orden/estado}" method="post">
-                        <label>Cambiar a Lista:</label>
-                        <input type="hidden" value="LISTA" name="estado"/>
-                        <input type="hidden" th:value="${orden.getIdOrden()}" name="idOrden"/>
-                        <button type="submit" class="btn btn-primary">Cambiar Estado</button>
-                    </form>
+    <div class="row py-5">
+        <div class="mx-auto">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title"></h3>
+                    <div class="card-text">
+                        <p>
+                            <span th:text="${'Orden: ' + orden.getIdOrden() + ' (' + orden.getEstado() + ')'}"></span><br>
+                            <span th:text="${'Nombre: ' + orden.getUsuario().getNombre()}"></span><br>
+                            <span th:text="${'Dirección de entrega: ' + orden.getDireccionDeEntrega().getDireccion()}"></span><br>
+                            <span th:text="${'Fecha de creación: ' + orden.getHoraCreacion()}"></span><br>
+                            <span th:text="${'Hora de entrega estimada: ' + orden.getHoraDeEntregaAproximada()}"></span><br>
+                            <span th:text="${'Hora de entrega estimada: ' + orden.getHoraDeEntregaAproximada()}"></span><br>
+                        </p>
+                        <table class="table table-bordered table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Precio</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="alimento : ${orden.getAlimentos()}">
+                                <td th:text="${alimento.getNombre()}"></td>
+                                <td th:text="${alimento.getPrecio()}"></td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"></td>
+                            </tr>
+                            <tr>
+                                <td><b>Total:</b></td>
+                                <td th:text="${orden.getCostoTotal()}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <form th:action="@{/orden/estado}" method="post">
+                            <label>Cambiar a Lista:</label>
+                            <input type="hidden" value="LISTA" name="estado"/>
+                            <input type="hidden" th:value="${orden.getIdOrden()}" name="idOrden"/>
+                            <button type="submit" class="btn btn-primary">Cambiar Estado</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
