--- a/src/main/resources/templates/orden/listado.html
+++ b/src/main/resources/templates/orden/listado.html
@@ -6,7 +6,7 @@
 <nav th:replace="fragments :: nav"></nav>
 
 <div class="container">
-    <div class="row">
+    <div class="row py-5">
         <table class="table">
             <thead>
             <tr>
