--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="form-group pt-3">
                         <button class="btn btn-success" type="submit">Iniciar sesión</button>
-                        <span class="ml-2">No tienes cuenta? <a th:href="@{/registrar}">Registrarse</a></span>
+                        <span class="ml-2">¿No tienes cuenta? <a th:href="@{/registrar}">Registrarse</a></span>
                     </div>
                 </form>
             </div>
