--- a/src/main/resources/templates/auth/registrar.html
+++ b/src/main/resources/templates/auth/registrar.html
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <button class="btn btn-success" type="submit">Registrar</button>
-                            <span class="ml-2">Ya tienes cuenta? <a th:href="@{/login}">Inicia sesión</a>.</span>
+                            <span class="ml-2">¿Ya tienes cuenta? <a th:href="@{/login}">Inicia sesión</a>.</span>
                         </div>
                     </div>
                 </form>
