--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,10 +33,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/orden/mostrar?estado=PENDIENTE"> Ordenes </a>
                 </li>
-                <li class="nav-item float-right">
+                <li th:if="${usuario == null}" class="nav-item">
                     <a class="nav-link" href="/login"> Iniciar sesión </a>
                 </li>
-                <li class="nav-item float-right">
+                <li th:if="${usuario == null}" class="nav-item">
+                    <a class="nav-link" href="/registrar"> Registrarse </a>
+                </li>
+                <li th:if="${usuario != null}" class="nav-item float-right">
                     <a class="nav-link" href="/logout"> Cerrar sesión </a>
                 </li>
             </ul>
@@ -44,7 +47,7 @@
     </nav>
 
     <div th:fragment="bootstrap-js">
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script> feather.replace() </script>
