--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,7 @@
 <div th:replace="fragments :: head"></div>
 <div th:replace="fragments :: nav"></div>
 <body>
-<h1>Welcome!</h1>
-<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
-<p>Click <a th:href="@{/login}">here</a> to login.</p>
-<p>Click <a th:href="@{/registrar}">here</a> to register.</p>
+    <h1> iEatIt </h1>
 </body>
 <div th:replace="fragments :: bootstrap-js"></div>
 </html>
