--- a/src/main/resources/templates/categorias/listar.html
+++ b/src/main/resources/templates/categorias/listar.html
@@ -4,42 +4,46 @@
     <div th:replace="fragments :: nav"></div>
     <body>
         <div class="container">
-            <div th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
-                <a href="/categorias/crear" class="text-white btn btn-success">
-                        <i data-feather="plus"></i>
-                </a>
+            <div class="row">
+                <div class="col-9">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th class="text-center" scope="col"> Nombre </th>
+                                <th class="text-center" scope="col"> Descripción </th>
+                                <th th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}"
+                                    class="text-center" scope="col" colspan="2"> Opciones </th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr th:each="categoria: ${categorias}">
+                                <td th:text="${categoria.nombre}" />
+                                <td th:text="${categoria.descripcion}" />
+                                <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
+                                    <a type="button" class="btn btn-outline-info"
+                                            th:href="@{/categorias/actualizar/{id}(id=${categoria.id})}">
+                                        Actualizar
+                                    </a>
+                                </td>
+                                <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
+                                    <form th:action="@{/categorias/eliminar(id=${categoria.getId()})}" method="post">
+                                        <button type="submit" class="btn btn-outline-danger">
+                                            Eliminar
+                                        </button>
+                                    </form>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-3">
+                    <div th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
+                        <a href="/categorias/crear" class="text-white btn btn-success">
+                            Crear categoría <i data-feather="plus"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <table class="table table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th class="text-center" scope="col"> # </th>
-                        <th class="text-center" scope="col"> Nombre </th>
-                        <th class="text-center" scope="col"> Descripción </th>
-                        <th th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}"
-                            class="text-center" scope="col" colspan="2"> Opciones </th>
-                    </tr>
-                </thead>
-                <tbody class="text-center">
-                    <tr th:each="categoria: ${categorias}">
-                        <th scope="row" th:text="${categoria.id}" />
-                        <td th:text="${categoria.nombre}" />
-                        <td th:text="${categoria.descripcion}" />
-                        <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
-                            <a type="button" class="btn btn-outline-info"
-                                    th:href="@{/categorias/actualizar/{id}(id=${categoria.id})}">
-                                Actualizar
-                            </a>
-                        </td>
-                        <td th:if="${usuario.getRole().getName() == 'ROLE_ADMINISTRADOR'}">
-                            <form th:action="@{/categorias/eliminar(id=${categoria.getId()})}" method="post">
-                                <button type="submit" class="btn btn-outline-danger">
-                                    Eliminar
-                                </button>
-                            </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </body>
     <div th:replace="fragments :: bootstrap-js"></div>
