--- a/src/main/resources/templates/orden/listado.html
+++ b/src/main/resources/templates/orden/listado.html
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row py-5">
-        <table class="table">
+        <table class="table table-bordered table-hover">
             <thead>
             <tr>
                 <th scope="col">Hora</th>
