--- a/src/main/resources/templates/categorias/listar.html
+++ b/src/main/resources/templates/categorias/listar.html
@@ -4,7 +4,7 @@
     <div th:replace="fragments :: nav"></div>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row py-5">
                 <div class="col-9">
                     <table class="table table-bordered table-hover">
                         <thead>
