--- a/src/main/resources/templates/alimentos/crear.html
+++ b/src/main/resources/templates/alimentos/crear.html
@@ -1,35 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title> Alimentos </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <script src="https://unpkg.com/feather-icons"></script>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"> iEatIt </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/categorias/listar"> Categorias </a>
-                    </li>
-                    <li class="nav-item active">
-                      <a class="nav-link">
-                        Alimentos
-                        <span class="sr-only">(current)</span>
-                      </a>
-                    </li>
-                    <li class="nav-item my-2 my-lg-0">
-                        <a class="nav-link" href="#"> Iniciar sesión </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+<div th:replace="fragments :: head"></div>
+<div th:replace="fragments :: nav"></div>
         <div class="container">
-            <form th:action="@{/alimentos/crear}" th:object="${alimento}" method="post" autocomplete="off">
+            <form class="py-5" th:action="@{/alimentos/crear}" th:object="${alimento}" method="post" autocomplete="off">
                 <div class="form-group">
                     <label for="nombre">
                         Nombre
