--- a/src/main/resources/templates/alimentos/actualizar.html
+++ b/src/main/resources/templates/alimentos/actualizar.html
@@ -39,6 +39,14 @@
                         Descripción del alimento
                     </small>
                 </div>
+                <div class="form-group">
+                    <label for="categoria">Categoria</label>
+                    <select class="form-control" id="categoria">
+                        <option th:each="categoria: ${categorias}" value="${categoria.id}">
+                            ${categoria.nombre}
+                        </option>
+                    </select>
+                </div>
                 <button type="submit" class="btn btn-primary">
                     Actualizar
                 </button>
