--- a/src/main/resources/templates/alimentos/crear.html
+++ b/src/main/resources/templates/alimentos/crear.html
@@ -37,6 +37,14 @@
                         Descripción del alimento
                     </small>
                 </div>
+                <div class="form-group">
+                    <label for="categoria">Categoria</label>
+                    <select class="form-control" id="categoria" th:field="*{categoria}">
+                        <option th:each="categoria: ${categorias}"
+                        th:value="${categoria.getId()}" th:text"${categoria.getNombre()}">
+                        </option>
+                    </select>
+                </div>
                 <button type="submit" class="btn btn-primary">
                     Crear
                 </button>
