--- a/src/main/resources/templates/alimentos/listar.html
+++ b/src/main/resources/templates/alimentos/listar.html
@@ -29,7 +29,7 @@
                                 <td th:text="${alimento.nombre}" />
                                 <td th:text="${alimento.precio}" />
                                 <td th:text="${alimento.descripcion}" />
-                                <td th:text="${alimento.categoria}" />
+                                <td th:text="${alimento.categoria.getNombre()}" />
                                 <td th:if="${usuario.getRole().getName() == 'ROLE_CLIENTE'}">
                                     <button class="order text-white btn btn-success"
                                         th:attr="data-id=${alimento.id},
